現段階での実装をコミット

--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -48,9 +48,9 @@ spring:
             # UserInfoエンドポイントにリクエストする際にアクセストークンを設定する場所(header, from, query) 
             user-info-authentication-method: header
         registration:
-          authServer:
+          Server:
             # 認可サーバに登録しているこのクライアントのID
-            client-id: 
+            client-id: gateway
             # 認可サーバに登録しているこのクライアントのパスワード
             client-secret: 
             # 認可サーバのクライアントの認証方式(basic, post, none)
