--- a/item-resource/src/main/resources/application.yml
+++ b/item-resource/src/main/resources/application.yml
@@ -1,2 +1,14 @@
 server:
   port: 8081
+  
+logging:
+  level:
+    '[org.springframework.web]': DEBUG
+    '[org.springframework.security]': DEBUG
+
+spring:
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          jwk-set-uri: http://localhost:9090/oauth2/jwks
